# usfm-grammar

./: .bumpversion.cfg  .eslintrc.js  .gitignore  .npmignore  .prettierignore  Change log.md  Disclaimer.md  Questions.md  README.md  Testing Plan.md  cli.js  comparison.md  eslint.config.js  grammar.md  grammarOperations.js  index.html  json2usfm.js  ohm USFM parser  package-lock.json  package.json  parser.js  server.js  usfm.ohm  usfm.ohm.js
.github/workflows/: check-on-push.yml  lint-on-push.yml  npm-publish.yml  pypi_publish.yml  superlinter.yml  testpypi_publish.yml
atom-extension/: README.md  package.json
docs/: API guide for python usfm_grammar.ipynb  Dev_notes.md  Disclaimer.md  JSON_refactor.md  OutputComparisons.md  Questions.md  Releases.md  architecture.md  changelog.md  comparison.md  react-usage.md  relaxed_mode.md  roadmap.md  test-plan.md  tree-sitter-assesment.md
grammar/: usfm-relaxed.ohm  usfm-relaxed.ohm.js  usfm.ohm  usfm.ohm.js
js/: JSONparser.js  USFMparser.js  convert.js  convert_ohm_to_jsString.js  grammarOperations-relaxed.js  grammarOperations.js  main.js  parser.js  usfm-relaxed.ohm.js  usfm.ohm.js
js-usfm-parser/: .babelrc  .prettierignore  README.md  package-lock.json  package.json  prettierrc.json  test.cjs  test.js  usfmGenerator.js  usfmParser.js  usfm_parser.js
js-usfm-parser/src/: filters.js  index.js  usfmGenerator.js  usfmParser.js  usjGenerator.js
js-usfm-parser/utils/: markers.js
language-usfm/grammar/: tree-sitter-usfm.cson
node-usfm-parser/: README.md  eslint.config.js  package-lock.json  package.json  run.js  test.js
node-usfm-parser/src/: filters.js  index.js  listGenerator.js  queries.js  usfmGenerator.js  usfmParser.js  usfmParserWeb.js  usjGenerator.js  usxGenerator.js  validator.js
node-usfm-parser/test/: basic.js  config.js  test_auto_fix.js  test_list_conversion.js  test_parsing.js  test_usj_conversion.js  test_usx_conversion.js
node-usfm-parser/tests/: basic.js
py-usfm-parser/: .bumpversion.cfg  MANIFEST.in  README.md  a.txt  dev-requirements.txt  dev.py  pyproject.toml  requirements.txt  setup.py
py-usfm-parser/src/: grammar_rebuild.py
py-usfm-parser/src/usfm_grammar/: __init__.py  __main__.py  errors.py  filters.py  list_generator.py  queries.py  schema.py  usfm_generator.py  usfm_parser.py  usj_generator.py  usx_generator.py  validator.py  vrefs.py
py-usfm-parser/tests/: __init__.py  test_auto_fix.py  test_json_conversion.py  test_list_conversion.py  test_parsing.py  test_usx_conversion.py
python-usfm-parser/: .bumpversion.cfg  API guide for python usfm_grammar.ipynb  MANIFEST.in  README.md  dev-requirements.txt  expin.json  expin.usfm  grammar_rebuild.py  pyproject.toml  requirements.txt  sample.usfm  setup.py  usfm-parser.py  usfm_grammar.py
python-usfm-parser/.ipynb_checkpoints/: API guide for python usfm_grammar-checkpoint.ipynb  How to use usfm-grammar python module-checkpoint.ipynb
python-usfm-parser/src/: grammar_rebuild.py
python-usfm-parser/src/usfm_grammar/: __init__.py  __main__.py  list_generator.py  usfm_parser.py  usj_generator.py  usx_generator.py
python-usfm-parser/src/usfm_grammar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python-usfm-parser/tests/: __init__.py  test_json_conversion.py  test_list_conversion.py  test_parsing.py  test_parsing_errors.py  test_usx_conversion.py  test_with_committees_tests.py
rust-usfm-parser/: Cargo.toml  README.md  Readme.md  captures.rs  input.usfm  test_json_convertion.rs
rust-usfm-parser-new/: Cargo.toml
rust-usfm-parser-new/src/: filter.rs  lib.rs  main.rs  usfm_parser.rs  usj_generator.rs  usx_generator.rs
rust-usfm-parser-new/tests/: common.rs  test_json_conversion.rs  test_parsing.rs  test_usx_conversion.rs
rust-usfm-parser/src/: globals.rs  init.rs  input.usfm  lib.rs  list_generator.rs  main.rs  parser.rs  schema.rs  usfm_generator.rs  usfm_parser.rs  usjGenerator.rs  usj_generator.js  usj_generator.rs  usj_generator_threading.rs  validator.rs
rust-usfm-parser/tests/: common.rs  test_json_conversion.rs  test_list_conversion.rs  test_parsing.rs  test_usj.rs  test_usj_generator.rs  test_usx_conversion.rs  test_utils.rs
rust-usfm-parser/tests/common/: mod.rs
schemas/: Flat.json  FlatJSON.js  Nested.json  file.js  file.json  usj.js  usx.rnc  usx.rng
test/: parser.js  test.js  test_JapaneseFromEbible_correct.usfm  test_Maxakal'i-BrazilFromEbible_correct.usfm  test_OETfromfreelygiven_correct.usfm  test_apis.js  test_backward.js  test_bengaliFromEbible_correct.usfm  test_bugFixes.js  test_cli.js  test_complex_correct.usfm  test_filesFromWild.js  test_simple_ID_C_P_V_correct.usfm  test_simple_IDnotStarting_wrong.usfm  test_simple_IDwithout2ndparam_correct.usfm  test_simple_noC_wrong.usfm  test_simple_noID_wrong.usfm  test_simple_noP_wrong.usfm  test_simple_noV_wrong.usfm  test_simple_withEMPTYline_correct.usfm  test_tamilFromEbible_correct.usfm  testwith_usfmjs_testcases.js
test/resources/: 03-EXOeng-web.usfm  19-JOBeng-rv.usfm  20-PSAcmn-cu89s.usfm  20-PSAeng-rv.usfm  20-PSAeng-web.usfm  21-PROeng-web.usfm  (+13 more)
tests/: readme.md
tree-sitter-exp/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json  relaxed-grammar.js
tree-sitter-usfm/: Notes_on_grammar_building.md  README.md  grammar.js  package-lock.json  package.json  sample.out.json  sample.tree.out  sample.usfm
tree-sitter-usfm3/: .npmignore  Cargo.toml  Makefile  Notes_on_grammar_building.md  Package.swift  README.md  Readme-rust.md  grammar.js  high.htm  package-lock.json  package.json  pyproject.toml  python-Readme.md  sample.tree.out  sample.usfm  setup.py  tree-sitter.json
tree-sitter-usfm3/test/corpus/: test10_milestones.txt  test11_namespace_esb.txt  test1_headers.txt  test2_comments.txt  test3_introduction.txt  test4_chapter_verse.txt  test5_titles_n_paragraphs.txt  test6_poetry.txt  test7_lists_n_tables.txt  test8_footnotes_n_crossrefs.txt  test9_charactermarkers_n_nesting.txt
web-usfm-parser/: README.md  bench.js  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  test.js
(+1398 files in other folders)
