
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usfm-grammar"
version = "1.0.0-alpha.1"
description = "Python parser for USFM files, based on tree-sitter-usfm"
readme = "README.md"
authors = [{ name = "Kavitha Raju", email = "kavitha.raju@bridgeconn.com" }, 
            { name= "Joel Mathew", email = 'joel@bridgeconn.com'}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["usfm", "parser", "grammar", "tree-sitter"]
dependencies = [
    "tree-sitter",
    "lxml"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["rnc2rng", "jupyterlab", "pytest"]

[project.urls]
Homepage = "https://github.com/Bridgeconn/usfm-grammar/python-usfm-grammar#readme"

[project.scripts]
usfm-grammar = "usfm_grammar.__main__:main"