[package]
name = "rust-usfm-parser"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc="*"


[dependencies]
tree-sitter-usfm3 = "3.0.0-alpha.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.24.7"
tree-sitter-rust = "0.21"
cc = "=1.2.9"
streaming-iterator = "0.1.9"

