[package]
name = "tree-sitter-usfm3"
description = "Tree-sitter grammar for USFM"
version = "3.0.0-alpha.2"
license = "MIT"
readme = "Readme-rust.md"
keywords = ["incremental", "parsing", "tree-sitter", "usfm3"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Bridgeconn/usfm-grammar"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.26.8"

[build-dependencies]
cc = "1.2.48"
